backend for getuser portals
