# backend/swagger.json
@@ -410,6 +410,113 @@
         "x-nestia-method": "GET"
       }
     },
+    "/portals/user/{username}": {
+      "get": {
+        "tags": [],
+        "parameters": [
+          {
+            "name": "username",
+            "in": "path",
+            "schema": {
+              "type": "string"
+            },
+            "description": "",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Readonly__type.o1"
+                }
+              }
+            },
+            "x-nestia-encrypted": false
+          }
+        },
+        "summary": "Get all Portal of a single user",
+        "description": "The code snippet you provided is a method in the `PortalsController` class. It is a route handler\nfor the GET request to `/user/{username}` endpoint. Here's a breakdown of what it does:\nGets page",
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
+        "x-nestia-namespace": "portals.user.getPortalByUser",
+        "x-nestia-jsDocTags": [
+          {
+            "name": "summary",
+            "text": [
+              {
+                "text": "Get all Portal of a single user",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "date",
+            "text": [
+              {
+                "text": "9/25/2023 - 4:06:45 AM",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "security",
+            "text": [
+              {
+                "text": "bearer",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "async"
+          },
+          {
+            "name": "param",
+            "text": [
+              {
+                "text": "",
+                "kind": "parameterName"
+              },
+              {
+                "text": " ",
+                "kind": "space"
+              },
+              {
+                "text": "1} this is the page number of the return pending proposals",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "param",
+            "text": [
+              {
+                "text": "",
+                "kind": "parameterName"
+              },
+              {
+                "text": " ",
+                "kind": "space"
+              },
+              {
+                "text": "10} this is the limit of the return type of the pending proposals",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "returns"
+          }
+        ],
+        "x-nestia-method": "GET"
+      }
+    },
     "/portals/proposals": {
       "get": {
         "tags": [],
@@ -439,7 +546,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Readonly__type.o1"
+                  "$ref": "#/components/schemas/Readonly__type.o2"
                 }
               }
             },
@@ -749,7 +856,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Readonly__type.o2"
+                  "$ref": "#/components/schemas/Readonly__type.o3"
                 }
               }
             },
@@ -874,7 +981,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Readonly__type.o3"
+                  "$ref": "#/components/schemas/Readonly__type.o4"
                 }
               }
             },
@@ -1397,7 +1504,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Readonly__type.o4"
+                  "$ref": "#/components/schemas/Readonly__type.o5"
                 }
               }
             },
@@ -1670,7 +1777,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Readonly__type.o5"
+                  "$ref": "#/components/schemas/Readonly__type.o6"
                 }
               }
             },
@@ -1711,7 +1818,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Readonly__type.o6"
+                  "$ref": "#/components/schemas/Readonly__type.o7"
                 }
               }
             },
@@ -1908,7 +2015,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Readonly__type.o7"
+                  "$ref": "#/components/schemas/Readonly__type.o8"
                 }
               }
             },
@@ -2033,7 +2140,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Readonly__type.o8"
+                  "$ref": "#/components/schemas/Readonly__type.o9"
                 }
               }
             },
@@ -4008,6 +4115,25 @@
             "x-typia-optional": false,
             "type": "array",
             "items": {
+              "$ref": "#/components/schemas/PortalWithBalance"
+            }
+          }
+        },
+        "nullable": false,
+        "required": [
+          "data"
+        ],
+        "description": "Make all properties in T readonly",
+        "x-typia-jsDocTags": []
+      },
+      "Readonly__type.o2": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "x-typia-required": true,
+            "x-typia-optional": false,
+            "type": "array",
+            "items": {
               "$ref": "#/components/schemas/PortalProposals"
             }
           },
@@ -4025,7 +4151,7 @@
         "description": "Make all properties in T readonly",
         "x-typia-jsDocTags": []
       },
-      "Readonly__type.o2": {
+      "Readonly__type.o3": {
         "type": "object",
         "properties": {
           "data": {
@@ -4150,7 +4276,7 @@
         ],
         "x-typia-jsDocTags": []
       },
-      "Readonly__type.o3": {
+      "Readonly__type.o4": {
         "type": "object",
         "properties": {
           "data": {
@@ -4332,7 +4458,7 @@
         ],
         "x-typia-jsDocTags": []
       },
-      "Readonly__type.o4": {
+      "Readonly__type.o5": {
         "type": "object",
         "properties": {
           "data": {
@@ -4830,7 +4956,7 @@
         ],
         "x-typia-jsDocTags": []
       },
-      "Readonly__type.o5": {
+      "Readonly__type.o6": {
         "type": "object",
         "properties": {
           "data": {
@@ -4909,7 +5035,7 @@
         ],
         "x-typia-jsDocTags": []
       },
-      "Readonly__type.o6": {
+      "Readonly__type.o7": {
         "type": "object",
         "properties": {
           "data": {
@@ -4934,7 +5060,7 @@
         "description": "Make all properties in T readonly",
         "x-typia-jsDocTags": []
       },
-      "Readonly__type.o7": {
+      "Readonly__type.o8": {
         "type": "object",
         "properties": {
           "data": {
@@ -5083,7 +5209,7 @@
         ],
         "x-typia-jsDocTags": []
       },
-      "Readonly__type.o8": {
+      "Readonly__type.o9": {
         "type": "object",
         "properties": {
           "data": {
